# unbasa-eats

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SETUP.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/processed/: restaurant_data.csv
data/raw/: restaurant_data.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: chat-interface.tsx  layout.tsx  restaurant-list.tsx  theme-provider.tsx  websocket-chat.tsx
frontend/src/pages/: home.tsx  restaurant.tsx
frontend/src/types/: restaurant.ts
models/index/: document_ids.json  documents.json  embeddings.npy
notebooks/: restaurant.ipynb
src/api/: backend.py
src/api/static/: index.html
src/api/static/assets/: index-B7OGL0t9.css  index-BNGjLWMZ.css  index-DZturXCr.js  index-Dvkjyks_.js  index-QJV7sdmC.js  index-fumupYjX.css
src/chatbot/: chatbot.py  conversation.py  generator.py  retriever.py
src/knowledge_base/: indexer.py  processor.py
src/scraper/: helper.py  scraper.py
src/utils/: exceptions.py  json_to_csv.py  logger.py
