[project]
name = "restaurant-rcraper-rag-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "faiss-cpu==1.10.0",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.24.2",
    "google-api-python-client==2.168.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.5",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.72.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "httplib2==0.22.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "pluggy==1.5.0",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydub==0.25.1",
    "pyobjc==11.0",
    "pyobjc-core==11.0",
    "pyobjc-framework-accessibility==11.0",
    "pyobjc-framework-accounts==11.0",
    "pyobjc-framework-addressbook==11.0",
    "pyobjc-framework-adservices==11.0",
    "pyobjc-framework-adsupport==11.0",
    "pyobjc-framework-applescriptkit==11.0",
    "pyobjc-framework-applescriptobjc==11.0",
    "pyobjc-framework-applicationservices==11.0",
    "pyobjc-framework-apptrackingtransparency==11.0",
    "pyobjc-framework-audiovideobridging==11.0",
    "pyobjc-framework-authenticationservices==11.0",
    "pyobjc-framework-automaticassessmentconfiguration==11.0",
    "pyobjc-framework-automator==11.0",
    "pyobjc-framework-avfoundation==11.0",
    "pyobjc-framework-avkit==11.0",
    "pyobjc-framework-avrouting==11.0",
    "pyobjc-framework-backgroundassets==11.0",
    "pyobjc-framework-browserenginekit==11.0",
    "pyobjc-framework-businesschat==11.0",
    "pyobjc-framework-callkit==11.0",
    "pyobjc-framework-carbon==11.0",
    "pyobjc-framework-cfnetwork==11.0",
    "pyobjc-framework-cinematic==11.0",
    "pyobjc-framework-classkit==11.0",
    "pyobjc-framework-cloudkit==11.0",
    "pyobjc-framework-cocoa==11.0",
    "pyobjc-framework-colorsync==11.0",
    "pyobjc-framework-contacts==11.0",
    "pyobjc-framework-contactsui==11.0",
    "pyobjc-framework-coreaudio==11.0",
    "pyobjc-framework-coreaudiokit==11.0",
    "pyobjc-framework-corebluetooth==11.0",
    "pyobjc-framework-coredata==11.0",
    "pyobjc-framework-corehaptics==11.0",
    "pyobjc-framework-corelocation==11.0",
    "pyobjc-framework-coremedia==11.0",
    "pyobjc-framework-coremediaio==11.0",
    "pyobjc-framework-coremidi==11.0",
    "pyobjc-framework-coreml==11.0",
    "pyobjc-framework-coremotion==11.0",
    "pyobjc-framework-coreservices==11.0",
    "pyobjc-framework-corespotlight==11.0",
    "pyobjc-framework-coretext==11.0",
    "pyobjc-framework-corewlan==11.0",
    "pyobjc-framework-cryptotokenkit==11.0",
    "pyobjc-framework-datadetection==11.0",
    "pyobjc-framework-devicecheck==11.0",
    "pyobjc-framework-devicediscoveryextension==11.0",
    "pyobjc-framework-discrecording==11.0",
    "pyobjc-framework-discrecordingui==11.0",
    "pyobjc-framework-diskarbitration==11.0",
    "pyobjc-framework-dvdplayback==11.0",
    "pyobjc-framework-eventkit==11.0",
    "pyobjc-framework-exceptionhandling==11.0",
    "pyobjc-framework-executionpolicy==11.0",
    "pyobjc-framework-extensionkit==11.0",
    "pyobjc-framework-externalaccessory==11.0",
    "pyobjc-framework-fileprovider==11.0",
    "pyobjc-framework-fileproviderui==11.0",
    "pyobjc-framework-findersync==11.0",
    "pyobjc-framework-fsevents==11.0",
    "pyobjc-framework-gamecenter==11.0",
    "pyobjc-framework-gamecontroller==11.0",
    "pyobjc-framework-gamekit==11.0",
    "pyobjc-framework-gameplaykit==11.0",
    "pyobjc-framework-healthkit==11.0",
    "pyobjc-framework-imagecapturecore==11.0",
    "pyobjc-framework-installerplugins==11.0",
    "pyobjc-framework-intents==11.0",
    "pyobjc-framework-intentsui==11.0",
    "pyobjc-framework-iobluetooth==11.0",
    "pyobjc-framework-iobluetoothui==11.0",
    "pyobjc-framework-iosurface==11.0",
    "pyobjc-framework-ituneslibrary==11.0",
    "pyobjc-framework-kernelmanagement==11.0",
    "pyobjc-framework-latentsemanticmapping==11.0",
    "pyobjc-framework-launchservices==11.0",
    "pyobjc-framework-libdispatch==11.0",
    "pyobjc-framework-libxpc==11.0",
    "pyobjc-framework-linkpresentation==11.0",
    "pyobjc-framework-localauthentication==11.0",
    "pyobjc-framework-localauthenticationembeddedui==11.0",
    "pyobjc-framework-mailkit==11.0",
    "pyobjc-framework-mapkit==11.0",
    "pyobjc-framework-mediaaccessibility==11.0",
    "pyobjc-framework-mediaextension==11.0",
    "pyobjc-framework-medialibrary==11.0",
    "pyobjc-framework-mediaplayer==11.0",
    "pyobjc-framework-mediatoolbox==11.0",
    "pyobjc-framework-metal==11.0",
    "pyobjc-framework-metalfx==11.0",
    "pyobjc-framework-metalkit==11.0",
    "pyobjc-framework-metalperformanceshaders==11.0",
    "pyobjc-framework-metalperformanceshadersgraph==11.0",
    "pyobjc-framework-metrickit==11.0",
    "pyobjc-framework-mlcompute==11.0",
    "pyobjc-framework-modelio==11.0",
    "pyobjc-framework-multipeerconnectivity==11.0",
    "pyobjc-framework-naturallanguage==11.0",
    "pyobjc-framework-netfs==11.0",
    "pyobjc-framework-network==11.0",
    "pyobjc-framework-networkextension==11.0",
    "pyobjc-framework-notificationcenter==11.0",
    "pyobjc-framework-opendirectory==11.0",
    "pyobjc-framework-osakit==11.0",
    "pyobjc-framework-oslog==11.0",
    "pyobjc-framework-passkit==11.0",
    "pyobjc-framework-pencilkit==11.0",
    "pyobjc-framework-phase==11.0",
    "pyobjc-framework-photos==11.0",
    "pyobjc-framework-photosui==11.0",
    "pyobjc-framework-preferencepanes==11.0",
    "pyobjc-framework-pushkit==11.0",
    "pyobjc-framework-quartz==11.0",
    "pyobjc-framework-quicklookthumbnailing==11.0",
    "pyobjc-framework-replaykit==11.0",
    "pyobjc-framework-safariservices==11.0",
    "pyobjc-framework-safetykit==11.0",
    "pyobjc-framework-scenekit==11.0",
    "pyobjc-framework-screencapturekit==11.0",
    "pyobjc-framework-screensaver==11.0",
    "pyobjc-framework-screentime==11.0",
    "pyobjc-framework-searchkit==11.0",
    "pyobjc-framework-security==11.0",
    "pyobjc-framework-securityfoundation==11.0",
    "pyobjc-framework-securityinterface==11.0",
    "pyobjc-framework-sensitivecontentanalysis==11.0",
    "pyobjc-framework-servicemanagement==11.0",
    "pyobjc-framework-sharedwithyou==11.0",
    "pyobjc-framework-sharedwithyoucore==11.0",
    "pyobjc-framework-shazamkit==11.0",
    "pyobjc-framework-social==11.0",
    "pyobjc-framework-soundanalysis==11.0",
    "pyobjc-framework-speech==11.0",
    "pyobjc-framework-spritekit==11.0",
    "pyobjc-framework-storekit==11.0",
    "pyobjc-framework-symbols==11.0",
    "pyobjc-framework-syncservices==11.0",
    "pyobjc-framework-systemconfiguration==11.0",
    "pyobjc-framework-systemextensions==11.0",
    "pyobjc-framework-threadnetwork==11.0",
    "pyobjc-framework-uniformtypeidentifiers==11.0",
    "pyobjc-framework-usernotifications==11.0",
    "pyobjc-framework-usernotificationsui==11.0",
    "pyobjc-framework-videosubscriberaccount==11.0",
    "pyobjc-framework-videotoolbox==11.0",
    "pyobjc-framework-virtualization==11.0",
    "pyobjc-framework-vision==11.0",
    "pyobjc-framework-webkit==11.0",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyttsx3==2.98",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "selenium==4.31.0",
    "sentence-transformers==4.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "speechrecognition==3.14.2",
    "starlette==0.46.2",
    "sympy==1.13.3",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
]
